# dci-module-ppn-node-logger

./: CMakeLists.txt
idl/ppn/node/: logger.idl
src/: entry.cpp  logger.cpp  logger.hpp  pch.hpp
